fix(Workbench): Align header icon with title
Without flexbox, the icon container doesn't properly adapt to it's child dimensions.
There might be alternative solutions

--- a/packages/forma-36-react-components/src/components/Workbench/Workbench.css
+++ b/packages/forma-36-react-components/src/components/Workbench/Workbench.css
@@ -56,6 +56,7 @@
 
 .Workbench__header-icon {
   margin-right: var(--spacing-m);
+  display: flex;
 }
 
 .Workbench__header-title {
